Mantis ChangeLog

2003.??.??  -  0.18.0a4
 * Languages: Updated Italian localisation.
 * Enhancement: Field names in bug history are now localized.
 * Fix: 'Display selected only' on print bugs page fixed.
 * Fix: 'Hide resolved' now also works for report printing and export.
 * Fix #2626: $g_primary_table_tags is documented and in config files but never used 
 * Fix #2839: 'Join incorrect in print_reporter_options and print_assign_to_option_list'

 * Fix #2902: Project name is not printed on bug list report.
 * Fix #3011: 'Hide resolved' flag is now preserved when re-sorting bug list.
 * Fix #3019: Application Error 200 after updating a bug.
 * Fix #3020: Error when deleting a bug with bugnotes.
 * Fix #3021: Error when using phpMailer.
 * Fix #3022: Add user to project form lists disabled users.

2003.02.26  -  0.18.0a3

 * Behaviour change: allow bug IDs to get replaced when they are preceeded by any character that is not a letter, a number, or an underscore instead of requiring them to be preceeded by whitespace
 * Enhancement: Added "Hide resolved" functionality to bug list page.
 * Enhancement: When an enumeration is not found, display @<enumid>@ instead of @null@.
 * Enhancement: Added file type icons next to project documents and bug file attachments.  Also provided a set of standard icons.
 * Enhancement: Added a section to the bug view pages that lists the users that are monitoring the current bug.
 * Enhancement: Improved the layout of the "Send a reminder" form.
 * Fix: META redirects were not XHTML-compliant
 * Fix: $g_lang_current was not available to custom_strings_inc.php
 * Fix: reduced the executed number of queries throughout the interface
 * Fix: improved handling of bad cookies (you now get a chance to log in again)
 * Fix: Added the removal of invalid history entries that were added due to escaping errors to the string escaping fixes.