@@ -5,9 +5,10 @@ Mantis ChangeLog
  * Enhancement: Field names in bug history are now localized.
  * Fix: 'Display selected only' on print bugs page fixed.
  * Fix: 'Hide resolved' now also works for report printing and export.
+ * Fix: Do not call custom_field_set_value() in bug report and bug update if user has no write access.
+ * Fix: Printing context in case of errors is not working properly (a lot of notices are generated).
  * Fix #2626: $g_primary_table_tags is documented and in config files but never used 
  * Fix #2839: 'Join incorrect in print_reporter_options and print_assign_to_option_list'
-
  * Fix #2902: Project name is not printed on bug list report.
  * Fix #3011: 'Hide resolved' flag is now preserved when re-sorting bug list.
  * Fix #3019: Application Error 200 after updating a bug.
